mise a jour templates et views

--- a/shopping/shopping/shop/templates/base.html
+++ b/shopping/shopping/shop/templates/base.html
@@ -29,7 +29,7 @@
 
     ->
     <footer class="text-center mt-5" style="color: rgb(27, 27, 27);">
-        <p>&copy; 2024 Ma Boutique - Projet étudiant Hissein Abakar 🎓</p>
+        <p>&copy; 2026 my shop- ogrenci projem Hissein Abakar 🎓</p>
     </footer>
 
     
