--- a/shopping/shopping/shop/templates/kategori.html
+++ b/shopping/shopping/shop/templates/kategori.html
@@ -46,7 +46,7 @@
                     <hr class="my-3">
 
                     <div class="mt-auto">
-                        <h6 class="text-muted text-center mb-3" style="font-size: 0.9rem;">Sous-catégories :</h6>
+                        <h6 class="text-muted text-center mb-3" style="font-size: 0.9rem;">alt kategori :</h6>
                         
                         <div class="d-flex flex-wrap justify-content-center gap-2">
                             {% if category.altkategoriler.all %}
@@ -56,7 +56,7 @@
                                     </span>
                                 {% endfor %}
                             {% else %}
-                                <small class="text-muted fst-italic">Aucune sous-catégorie</small>
+                                <small class="text-muted fst-italic">alt kategori yok</small>
                             {% endif %}
                         </div>
                     </div>
