--- a/shopping/shopping/shop/templates/kategori.html
+++ b/shopping/shopping/shop/templates/kategori.html
@@ -16,7 +16,7 @@
 
     <div class="text-center mb-5">
         <h2 class="fw-bold text-uppercase position-relative d-inline-block">
-            Toutes nos catégories
+            Tum kategorilerimiz
             <span style="display:block; height:3px; width:50px; background-color:#764ba2; margin: 10px auto 0;"></span>
         </h2>
     </div>
